# sample-gnome-app

./: .gitignore  meson.build
gresource/: gresource.in.xml  meson.build
gresource/gtk/: App.ui  menus.ui
gsettings/: gschema.in.xml  meson.build  post_install.py
po/: POTFILES  meson.build  ru.po  template.pot
src/: App.vala  AppWindow.vala  Exitcodes.vala  SettingsEngine.vala  config.in.vala  meson.build
